<?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PropertyView">
 <android.support.design.widget.AppBarLayout
     android:id="@+id/app_bar_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     android:fitsSystemWindows="true"
     >

  <android.support.design.widget.CollapsingToolbarLayout
      android:layout_width="match_parent"
      android:layout_height="220dp"
      app:layout_scrollFlags="scroll|exitUntilCollapsed"
      app:contentScrim="?attr/colorPrimary"
      app:expandedTitleTextAppearance="@android:color/transparent"
      android:fitsSystemWindows="true"
      >

   <ImageView
       android:id="@+id/imageView"
       app:layout_collapseMode="parallax"
       android:src="@drawable/placeholder_bg_light"
       android:contentDescription="@string/app_name"
       android:scaleType="centerCrop"
       android:layout_width="match_parent"
       android:layout_height="220dp" />

   <android.support.v7.widget.Toolbar
       android:id="@+id/toolbar"
       android:layout_width="match_parent"
       android:layout_height="?attr/actionBarSize"
       app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
       android:title="@string/recent_news"
       app:layout_collapseMode="pin"
       />


  </android.support.design.widget.CollapsingToolbarLayout>



 </android.support.design.widget.AppBarLayout>

 <android.support.v4.widget.NestedScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     >

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/btn_radius"
       app:cardElevation="2dp"
       app:cardUseCompatPadding="true"

       >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
     <LinearLayout
         android:padding="@dimen/parent_layout_padding"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
       <ImageView
           android:src="@drawable/blueprint"
           android:layout_width="80sp"
           android:layout_height="60sp" />
      <TextView
          android:layout_centerVertical="true"
          android:gravity="center_vertical"
          android:text="@string/app_name"
          android:textColor="@android:color/black"
          android:id="@+id/locationWrapper"
          android:layout_width="match_parent"
          android:layout_height="60sp" />
     </LinearLayout>

    </LinearLayout>


   </android.support.v7.widget.CardView>
   <android.support.v7.widget.RecyclerView
       android:id="@+id/inclusion_grid"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"

       >

   </android.support.v7.widget.RecyclerView>
   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="16dp"
       app:cardUseCompatPadding="true"
       >
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/parent_layout_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
     <TextView
         android:textSize="@dimen/header_text_size"
         android:textStyle="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/price"
         />
     <View style="@style/Divider" android:layout_marginTop="@dimen/btn_radius"/>
     <LinearLayout
         android:layout_marginTop="@dimen/parent_layout_padding"
         android:weightSum="2"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:layout_weight="1"
             android:layout_width="0sp"
             android:layout_height="wrap_content"
             android:text="@string/security_money"
             />
      <TextView
          android:gravity="end"
          android:id="@+id/security_money"
          android:layout_weight="1"
          android:layout_width="0sp"
          android:layout_height="wrap_content"
          android:text="0000"
          />
     </LinearLayout>
     <LinearLayout
         android:layout_marginTop="@dimen/btn_radius"
         android:weightSum="2"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
      <TextView
          android:layout_weight="1"
          android:layout_width="0sp"
          android:layout_height="wrap_content"
          android:text="@string/monthly_money"
          />
      <TextView
          android:gravity="end"
          android:id="@+id/monthly_payment"
          android:layout_weight="1"
          android:layout_width="0sp"
          android:layout_height="wrap_content"
          android:text="0000"
          />
     </LinearLayout>
     <LinearLayout
         android:layout_marginTop="@dimen/btn_radius"
         android:weightSum="2"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
      <TextView
          android:layout_weight="1"
          android:layout_width="0sp"
          android:layout_height="wrap_content"
          android:text="@string/electricity_money"
          />
      <TextView
          android:textColor="@android:color/black"
          android:gravity="end"
          android:id="@+id/electricity_payment"
          android:layout_weight="1"
          android:layout_width="0sp"
          android:layout_height="wrap_content"
          android:text="As per current Per Unit Charge"
          />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/parent_layout_padding"
         >
      <TextView
          android:textSize="10sp"
          android:layout_gravity="center"
          android:textColor="@color/themeColor"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/btn_radius"
          android:text="@string/security_money_hint"
          />
     </LinearLayout>

    </LinearLayout>
   </android.support.v7.widget.CardView>
   <android.support.v7.widget.CardView
 android:elevation="0sp"
 app:cardCornerRadius="0sp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="16dp"
       app:cardUseCompatPadding="false"
       >
    <LinearLayout
        android:padding="@dimen/parent_layout_padding"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
     <TextView
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
         android:textColor="@color/colorPrimaryDark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/note"
         />
     <View style="@style/Divider" android:layout_marginTop="@dimen/btn_radius"/>
     <TextView
         android:layout_marginTop="@dimen/btn_radius"
         android:text="@string/note_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="12sp"
         />
     <TextView
         android:layout_marginTop="@dimen/btn_radius"
         android:text="@string/note_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="12sp"
         />
     <TextView
         android:layout_marginTop="@dimen/btn_radius"
         android:text="@string/note_3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="12sp"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="12sp"
         />
    </LinearLayout>
   </android.support.v7.widget.CardView>
 <LinearLayout
     android:padding="@dimen/parent_layout_padding"
     android:layout_width="match_parent"
     android:layout_height="30sp">

 </LinearLayout>
  </LinearLayout>

 </android.support.v4.widget.NestedScrollView>

 <android.support.design.widget.FloatingActionButton
     android:padding="@dimen/btn_radius"
     android:src="@drawable/gallery_icon"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     app:elevation="6dp"
     app:pressedTranslationZ="12dp"
     app:layout_anchor="@id/app_bar_layout"
     app:layout_anchorGravity="bottom|right|end"
     />
 <RelativeLayout
     android:padding="@dimen/btn_radius"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
  <Button
      android:id="@+id/book_now_initiate"
      android:textColor="@color/white"
      android:text="@string/book_btn"
      android:background="@drawable/round_btn"
      android:layout_alignParentBottom="true"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
 </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>