<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileCreation"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/parent_layout_padding">
        <EditText
            android:inputType="textPersonName"
            android:id="@+id/name"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="6sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_back"
            android:hint="@string/nameHint"
            />
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="6sp"
            android:layout_marginTop="@dimen/btn_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_back"
            android:hint="@string/emailHint"
            />
        <Button
            android:id="@+id/save"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/white"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_accent"/>
    </LinearLayout>

</LinearLayout>