<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".upload_documents"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_marginBottom="@dimen/btn_radius"
        android:padding="@dimen/parent_layout_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="false"
        android:elevation="0sp"
        app:cardCornerRadius="0sp"
        >
        <LinearLayout
            android:padding="@dimen/btn_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boking_for"
                android:layout_weight="2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/header"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
 <android.support.v4.widget.NestedScrollView
        android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_marginTop="?android:attr/actionBarSize"
         android:paddingTop
             ="@dimen/parent_layout_padding"
         android:layout_width="match_parent"
         android:layout_height="match_parent" android:orientation="vertical">
         <android.support.v7.widget.CardView
             android:padding="@dimen/parent_layout_padding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardUseCompatPadding="false"
             android:elevation="0sp"
             app:cardCornerRadius="0sp"
             >
             <LinearLayout
                 android:padding="@dimen/parent_layout_padding"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">

                 <TextView
                     android:layout_gravity="left"
                     android:drawablePadding="@dimen/parent_layout_padding"
                     android:drawableLeft="@drawable/card"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/id_text"
                     android:layout_weight="2"/>
                 <TextView
                     android:layout_marginLeft="50sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/id_hint"
                     android:textColor="@color/colorPrimaryLight"
                     />
                 <LinearLayout
                     android:layout_marginTop="@dimen/parent_layout_padding"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                    <RadioGroup
                        android:id="@+id/radioDoc"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioAdhaar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/adhaar" />
                        <RadioButton
                            android:id="@+id/radioPassport"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/passport"
                            />
                    </RadioGroup>

                 </LinearLayout>
                 <LinearLayout
                     android:layout_marginTop="@dimen/parent_layout_padding"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
                         android:gravity="center"
                         android:layout_width="64sp"
                         android:layout_height="wrap_content"
                         android:text="Front"
                         />
                     <TextView
                         android:gravity="center"
                         android:layout_width="64sp"
                         android:layout_height="wrap_content"
                         android:text="Back"
                         />
                 </LinearLayout>
                 <LinearLayout

                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_gravity="center"
                     android:gravity="center"
                     >
                     <ImageButton
                         android:id="@+id/front_face"
                         android:background="@color/white"
                         android:padding="@dimen/parent_layout_padding"
                         android:layout_width="64sp"
                         android:layout_height="64sp"
                         android:src="@drawable/camera_holder"
                         />
                     <ImageButton
                         android:id="@+id/back_face"
                         android:padding="@dimen/parent_layout_padding"
                         android:background="@color/white"
                         android:layout_width="64sp"
                         android:layout_height="64sp"
                         android:src="@drawable/camera_holder"
                         />
                 </LinearLayout>
             </LinearLayout>

         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
             android:layout_marginTop="@dimen/btn_radius"
             android:padding="@dimen/parent_layout_padding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardUseCompatPadding="false"
             android:elevation="0sp"
             app:cardCornerRadius="0sp"
             >
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:weightSum="3"
                     >
                     <TextView
                         android:padding="@dimen/btn_radius"
                         android:textSize="@dimen/header_text_size"
                         android:textStyle="bold"
                     android:layout_width="0sp"
                     android:layout_height="wrap_content"
                     android:text="@string/Account_Details"
                     android:layout_weight="3"/>

                 </LinearLayout>
                 <LinearLayout
                     android:layout_marginTop="@dimen/btn_radius"
                     android:padding="@dimen/btn_radius"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <TextView
                         android:padding="@dimen/btn_radius"
                         android:id="@+id/booking_person_name"
                         android:textSize="14sp"
                         android:drawablePadding="@dimen/btn_radius"
                         android:drawableLeft="@drawable/ic_person_black_24dp"
                         android:text="@string/nameHint"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         />
                     <TextView
                         android:padding="@dimen/btn_radius"
                         android:id="@+id/booking_person_email"
                         android:textSize="14sp"
                         android:drawablePadding="@dimen/btn_radius"
                         android:drawableLeft="@drawable/ic_email_black_24dp"
                         android:text="@string/emailHint"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         />

                 </LinearLayout>
                 <LinearLayout
                     android:layout_marginBottom="@dimen/btn_radius"
                     android:weightSum="2"
                     android:orientation="horizontal"
                     android:padding="@dimen/btn_radius"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <EditText
                         android:drawablePadding="@dimen/btn_radius"
                         android:drawableLeft="@drawable/ic_date_range_black_24dp"
                         android:id="@+id/date_from"
                         android:focusable="false"
                         android:layout_margin="1sp"
                         android:hint="@string/selectDate"
                         android:background="@drawable/input_back"
                         android:layout_width="0sp"
                         android:layout_weight="2"
                         android:layout_height="wrap_content" />

                 </LinearLayout>

             </LinearLayout>


         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardUseCompatPadding="true"
             android:layout_marginBottom="55sp"

             >
             <LinearLayout
                 android:orientation="vertical"
                 android:padding="@dimen/parent_layout_padding"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <TextView
                     android:textSize="@dimen/header_text_size"
                     android:textStyle="bold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/price"
                     />
                 <View style="@style/Divider"
                     android:layout_marginTop="@dimen/btn_radius"/>
                 <LinearLayout
                     android:layout_marginTop="@dimen/parent_layout_padding"
                     android:weightSum="2"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
                         android:layout_weight="1"
                         android:layout_width="0sp"
                         android:layout_height="wrap_content"
                         android:text="@string/security_money"
                         />
                     <TextView
                         android:gravity="end"
                         android:id="@+id/security_money"
                         android:layout_weight="1"
                         android:layout_width="0sp"
                         android:layout_height="wrap_content"
                         android:text="0000"
                         />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_marginTop="@dimen/btn_radius"
                     android:weightSum="2"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
                         android:layout_weight="1"
                         android:layout_width="0sp"
                         android:layout_height="wrap_content"
                         android:text="@string/monthly_money"
                         />
                     <TextView
                         android:gravity="end"
                         android:id="@+id/monthly_payment"
                         android:layout_weight="1"
                         android:layout_width="0sp"
                         android:layout_height="wrap_content"
                         android:text="0000"
                         />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_marginTop="@dimen/btn_radius"
                     android:weightSum="2"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
                         android:layout_weight="1"
                         android:layout_width="0sp"
                         android:layout_height="wrap_content"
                         android:text="@string/electricity_money"
                         />
                     <TextView
                         android:textColor="@android:color/black"
                         android:gravity="end"
                         android:id="@+id/electricity_payment"
                         android:layout_weight="1"
                         android:layout_width="0sp"
                         android:layout_height="wrap_content"
                         android:text="As per current Per Unit Charge"
                         />
                 </LinearLayout>
                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/parent_layout_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    />
                 <LinearLayout
                     android:weightSum="2"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                    >
                     <CheckBox
                         android:id="@+id/advanceCheckBox"
                         android:hint="@string/or_advance"
                         android:layout_weight="2"
                         android:layout_width="0sp"
                         android:layout_height="wrap_content" />

                 </LinearLayout>

             </LinearLayout>

         </android.support.v7.widget.CardView>

     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:padding="@dimen/btn_radius"
            android:id="@+id/checkout"
            android:textColor="@color/white"
            android:background="@drawable/gradient_back"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            />
    </RelativeLayout>
</RelativeLayout>